package com.practice.designpattern.behavioral.state.bad;

public enum ToolType {
    SELECTION,
    ERASER,
    BRUSH
}